Added models for track component

--- a/config/locales/biovision-ru.yml
+++ b/config/locales/biovision-ru.yml
@@ -1,6 +1,8 @@
 ru:
   attributes:
+    banned: "В чёрном списке"
     created_at: "Время создания"
+    object_count: "Количество объектов"
     priority: "Порядок сортировки"
     updated_at: "Время обновления"
     uuid: "UUID"
