Added migration for users component

--- a/config/locales/biovision-ru.yml
+++ b/config/locales/biovision-ru.yml
@@ -2,6 +2,8 @@ ru:
   attributes:
     banned: "В чёрном списке"
     created_at: "Время создания"
+    data: "Данные"
+    deleted: "Объект удалён"
     object_count: "Количество объектов"
     priority: "Порядок сортировки"
     updated_at: "Время обновления"
