--- a/config/locales/users-ru.yml
+++ b/config/locales/users-ru.yml
@@ -93,3 +93,4 @@ ru:
           registration_open: "Регистрация открыта"
           require_email: "Электронная почта обязательна при регистрации"
           use_invites: "Использовать приглашения"
+  anonymous: "Анонимно"
