Users can register on site

--- a/config/locales/users-ru.yml
+++ b/config/locales/users-ru.yml
@@ -95,3 +95,23 @@ ru:
           require_email: "Электронная почта обязательна при регистрации"
           use_invites: "Использовать приглашения"
   anonymous: "Анонимно"
+  my:
+    profiles:
+      new:
+        title: "Регистрация"
+        nav_text: "Зарегистрироваться"
+        heading: "Регистрация на сайте"
+        form:
+          i_am_bot: "НЕ ОТМЕЧАЙТЕ эту галочку"
+          consent: "Принимаю пользовательское соглашение и даю своё согласие на обработку персональных данных"
+          guidelines:
+            screen_name: "Только латинские буквы, цифры и знаки подчёркивания. От 1 до 30 символов."
+            password: "Выберите надёжный пароль, который нельзя легко подобрать."
+            password_confirmation: "Повторите пароль, чтобы убедиться, что вы не ошиблись в наборе."
+            email: "Введите почту для обратной связи и на случай сброса пароля."
+          join: "Зарегистрироваться"
+          invitation_code: "Пригласительный код"
+      closed:
+        title: "Регистрация закрыта"
+        heading: "Регистрация закрыта"
+        registration_is_closed: "Регистрация новых пользователей закрыта"
