--- a/config/locales/biovision-ru.yml
+++ b/config/locales/biovision-ru.yml
@@ -10,6 +10,8 @@ ru:
     created_at: "Время создания"
     data: "Данные"
     deleted: "Объект удалён"
+    language: "Язык"
+    language_id: "Язык"
     object_count: "Количество объектов"
     priority: "Порядок сортировки"
     updated_at: "Время обновления"
