--- a/config/locales/content-ru.yml
+++ b/config/locales/content-ru.yml
@@ -79,7 +79,9 @@ ru:
       heading: "Редактирование динамической страницы"
     form:
       guidelines:
+        name: "Максимум 100 символов."
         slug: "Максимум 100 символов."
+        url: "Максимум 100 символов."
     new:
       title: "Добавление динамической страницы"
       nav_text: "Создать"
