Added new parts from biovision-base

--- a/config/locales/users-ru.yml
+++ b/config/locales/users-ru.yml
@@ -118,6 +118,8 @@ ru:
         title: "Регистрация закрыта"
         heading: "Регистрация закрыта"
         registration_is_closed: "Регистрация новых пользователей закрыта"
+      show:
+        title: "Мой профиль"
   authentication:
     form:
       log_in: "Войти"
