Updated partials and added form styles

--- a/config/locales/components-ru.yml
+++ b/config/locales/components-ru.yml
@@ -86,3 +86,15 @@ ru:
         heading: "Компоненты"
       show:
         title: "Компонент «%{slug}»"
+  shared:
+    forms:
+      simple_image:
+        guideline: "Картинка в формате SVG, JPG или PNG размером в пределах 1280×1280."
+        load_image:
+          upload: "Загрузить"
+          cancel: "Отменить"
+          new_image: "Новая картинка"
+        new_image: "Загрузить"
+        select: "Выбрать"
+        browse:
+          filter: "Фильтр по названию или имени файла"
