--- a/config/locales/users-ru.yml
+++ b/config/locales/users-ru.yml
@@ -124,8 +124,13 @@ ru:
         title: "Регистрация закрыта"
         heading: "Регистрация закрыта"
         registration_is_closed: "Регистрация новых пользователей закрыта"
+      create:
+        success: "Вы зарегистрировались и вошли"
+        are_you_bot: "Не нужно было отмечать галочку."
       show:
         title: "Мой профиль"
+      update:
+        success: "Профиль успешно изменён"
   authentication:
     form:
       log_in: "Войти"
