--- a/config/locales/users-ru.yml
+++ b/config/locales/users-ru.yml
@@ -36,8 +36,8 @@ ru:
           attributes:
             email:
               invalid: "не выглядит как email"
-            slug:
-              invalid: "должен содержать от 1 до 30 латинских букв, цифр или знаков подчёркивания"
+            screen_name:
+              invalid: "должен содержать от 2 до 36 латинских букв, цифр, знаков подчёркивания или дефисов (кроме начала и конца)"
     attributes:
       biovision_component_user:
         administrator: "Администратор"
@@ -80,7 +80,7 @@ ru:
         referral_link: "Реферальная ссылка"
     guidelines:
       user:
-        screen_name: "Только латинские буквы, цифры и знаки подчёркивания. От 1 до 30 символов."
+        screen_name: "Только латинские буквы, цифры, знаки подчёркивания и дефис (кроме начала и конца). От 2 до 36 символов."
         password: "Выберите надёжный пароль, который нельзя легко подобрать."
         password_confirmation: "Повторите пароль, чтобы убедиться, что вы не ошиблись в наборе."
         email: "Введите почту для обратной связи и на случай сброса пароля."
