--- a/config/locales/users-ru.yml
+++ b/config/locales/users-ru.yml
@@ -38,6 +38,8 @@ ru:
               invalid: "не выглядит как email"
             screen_name:
               invalid: "должен содержать от 2 до 36 латинских букв, цифр, знаков подчёркивания или дефисов (кроме начала и конца)"
+            code:
+              invalid: "недействителен"
     attributes:
       biovision_component_user:
         administrator: "Администратор"
@@ -61,6 +63,7 @@ ru:
         balance: "Баланс"
         birthday: "Дата рождения"
         bot: "Это бот"
+        code: "Код"
         consent: "Согласие на обработку персональных данных и принятие пользовательского соглашения"
         email: "Email"
         email_confirmed: "Email подтверждён"
@@ -156,3 +159,4 @@ ru:
         invitation_code: "Пригласительный код"
         i_am_bot: "НЕ ОТМЕЧАЙТЕ эту галочку"
         join: "Зарегистрироваться"
+        closed: "Регистрация новых пользователей закрыта"
