Displaying user profile for administrator

--- a/config/locales/users-ru.yml
+++ b/config/locales/users-ru.yml
@@ -81,6 +81,16 @@ ru:
         screen_name: "Логин"
         super_user: "Супер пользователь"
         referral_link: "Реферальная ссылка"
+      user_profile:
+        gender: "Пол"
+        genders:
+          female: "Женский"
+          male: "Мужской"
+          not_set: "Не указан"
+          other: "Другое"
+        name: "Имя"
+        patronymic: "Отчество"
+        surname: "Фамилия"
     guidelines:
       user:
         screen_name: "Только латинские буквы, цифры, знаки подчёркивания и дефис (кроме начала и конца). От 2 до 36 символов."
@@ -160,3 +170,14 @@ ru:
         i_am_bot: "НЕ ОТМЕЧАЙТЕ эту галочку"
         join: "Зарегистрироваться"
         closed: "Регистрация новых пользователей закрыта"
+  admin:
+    users:
+      nav_item:
+        description: "Управление пользователями сайта"
+        text: "Список пользователей"
+      index:
+        title: "Пользователи, страница %{page}"
+        heading: "Пользователи"
+      show:
+        title: "Пользователь %{name}"
+        deleted: "Пользователь удалён"
