Part of user confirmations

--- a/config/locales/users-ru.yml
+++ b/config/locales/users-ru.yml
@@ -107,13 +107,14 @@ ru:
         settings:
           bounce_count: "Максимальное количество неудачных попыток входа"
           bounce_timeout: "Тайм-аут для запрета повторных попыток входа"
-          confirm_email: "Отправлять письмо для подтверждения почты сразу"
+          confirm_email: "Отправлять письмо для подтверждения почты"
           email_as_login: "Использовать электронную почту в качестве логина"
           invite_count: "Количество кодов приглашения после регистрации"
           invite_only: "Только по приглашениям"
           registration_open: "Регистрация открыта"
           require_email: "Электронная почта обязательна при регистрации"
           use_invites: "Использовать приглашения"
+          use_phone: "Использовать номер телефона"
   anonymous: "Анонимно"
   log_in: "Войти"
   log_out: "Выйти"
@@ -165,6 +166,21 @@ ru:
         title: "Личный кабинет"
         nav_text: "Личный кабинет"
         heading: "Личный кабинет"
+        email_is_not_confirmed: "Ваш адрес электронной почты не подтверждён."
+    confirmations:
+      show:
+        nav_text: "Подтвердить email"
+        title: "Подтверждение адреса электронной почты"
+        heading: "Подтверждение адреса электронной почты"
+        no_code: "Кода подтверждения нет?"
+        send_code: "Отправить код"
+        got_code: "Код подтверждения получен?"
+        confirm: "Подтвердить"
+      create:
+        set_email: "Укажите свой адрес электронной почты"
+        success: "Код подтверждения отправлен"
+      update:
+        invalid_code: "Недействительный код"
   authentication:
     form:
       log_in: "Войти"
