Removed priority from list-item, added name and description keys

--- a/config/locales/biovision-ru.yml
+++ b/config/locales/biovision-ru.yml
@@ -10,9 +10,11 @@ ru:
     created_at: "Время создания"
     data: "Данные"
     deleted: "Объект удалён"
+    description: "Описание"
     image: "Картинка"
     language: "Язык"
     language_id: "Язык"
+    name: "Название"
     object_count: "Количество объектов"
     priority: "Порядок сортировки"
     updated_at: "Время обновления"
