Added models for contact component

--- a/config/locales/biovision-ru.yml
+++ b/config/locales/biovision-ru.yml
@@ -5,8 +5,15 @@ ru:
     few: "%{count} объекта"
     many: "%{count} объектов"
     other: "%{count} объектов"
+  child_count:
+    zero: "дочерних объектов нет"
+    one: "%{count} дочерний объект"
+    few: "%{count} дочерних объекта"
+    many: "%{count} дочерних объектов"
+    other: "%{count} дочерних объектов"
   attributes:
     banned: "В чёрном списке"
+    children_cache: "Кеш дочек"
     created_at: "Время создания"
     data: "Данные"
     deleted: "Объект удалён"
@@ -21,6 +28,9 @@ ru:
       title: "Заголовок окна (title)"
     name: "Название"
     object_count: "Количество объектов"
+    parent: "Родитель"
+    parent_id: "Родитель"
+    parents_cache: "Кеш родителей"
     priority: "Порядок сортировки"
     updated_at: "Время обновления"
     uuid: "UUID"
