--- a/config/locales/contact-ru.yml
+++ b/config/locales/contact-ru.yml
@@ -96,3 +96,11 @@ ru:
         description: "Управление ответами на сообщения от посетителей"
       show:
         title: "Ответ на сообщение от посетителя №%{id}"
+  contact:
+    form:
+      message: "Спасибо за обратную связь."
+      disclaimer: "Отправляя данную форму, вы соглашаетесь на обработку своих персональных данных"
+      submit: "Отправить"
+    index:
+      nav_text: "Контакты"
+      title: "Контакты"
