--- a/config/locales/components-ru.yml
+++ b/config/locales/components-ru.yml
@@ -105,3 +105,7 @@ ru:
         select: "Выбрать"
         browse:
           filter: "Фильтр по названию или имени файла"
+  biovision:
+    components:
+      base:
+        name: "Базовый компонент"
