Using dynamic component links

--- a/config/locales/users-ru.yml
+++ b/config/locales/users-ru.yml
@@ -109,11 +109,14 @@ ru:
           bounce_count: "Максимальное количество неудачных попыток входа"
           bounce_timeout: "Тайм-аут для запрета повторных попыток входа"
           confirm_email: "Отправлять письмо для подтверждения почты"
+          confirm_phone: "Отправлять SMS для подтверждения телефона"
           email_as_login: "Использовать электронную почту в качестве логина"
           invite_count: "Количество кодов приглашения после регистрации"
           invite_only: "Только по приглашениям"
+          phone_as_login: "Использовать телефон в качестве логина"
           registration_open: "Регистрация открыта"
           require_email: "Электронная почта обязательна при регистрации"
+          require_phone: "Телефон обязателен при регистрации"
           use_invites: "Использовать приглашения"
           use_phone: "Использовать номер телефона"
   anonymous: "Анонимно"
