Added quick search; using ACL for components

--- a/config/locales/biovision-ru.yml
+++ b/config/locales/biovision-ru.yml
@@ -99,6 +99,10 @@ ru:
         nav_text: "Администрирование"
         title: "Администрирование"
         heading: "Администрирование"
+    widgets:
+      quick_search:
+        heading: "Быстрый поиск"
+        search_string: "Строка поиска"
   layouts:
     admin:
       footer:
