Dynamically detect if context is necessary

--- a/config/locales/biovision-ru.yml
+++ b/config/locales/biovision-ru.yml
@@ -27,6 +27,7 @@ ru:
       keywords: "Ключевые слова"
       title: "Заголовок окна (title)"
     name: "Название"
+    nav_text: "Текст для ссылки"
     object_count: "Количество объектов"
     parent: "Родитель"
     parent_id: "Родитель"
