Logging in as other user

--- a/config/locales/users-ru.yml
+++ b/config/locales/users-ru.yml
@@ -258,6 +258,8 @@ ru:
         nav_text: "Жетоны"
         title: "Жетоны доступа пользователя %{user}"
         heading: "Жетоны доступа"
+      authenticate:
+        nav_text: "Войти как этот пользователь"
   users:
     profile:
       registration_date: "Дата регистрации"
